button spacing and outline fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 80%;
+  width: 70%;
   margin-top: 2em;
 }
 
